Ajuste de documentacao
